Closed Bug 1821545 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::Maybe<T>::emplace<T> | mozilla::net::CookieJarSettings::SetFingerprintingRandomizationKey]

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- unaffected
firefox111 --- unaffected
firefox112 --- fixed

People

(Reporter: mccr8, Assigned: timhuang)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/d03ddf90-5881-4c28-ac3b-80c620230308

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!isSome())

Top 10 frames of crashing thread:

0  XUL  mozilla::Maybe<nsTArray<unsigned char> >::emplace<nsTArray<unsigned char> >  mfbt/Maybe.h:844
1  XUL  mozilla::net::CookieJarSettings::SetFingerprintingRandomizationKey  netwerk/cookie/CookieJarSettings.h:171
1  XUL  mozilla::AntiTrackingUtils::UpdateAntiTrackingInfoForChannel  toolkit/components/antitracking/AntiTrackingUtils.cpp:896
2  XUL  mozilla::net::nsHttpChannel::AsyncOpen  netwerk/protocol/http/nsHttpChannel.cpp:5942
3  XUL  mozilla::net::nsHttpChannel::ContinueProcessRedirection  netwerk/protocol/http/nsHttpChannel.cpp:5357
4  XUL  mozilla::net::nsHttpChannel::OnRedirectVerifyCallback  netwerk/protocol/http/nsHttpChannel.cpp:8689
5  XUL  mozilla::net::nsAsyncVerifyRedirectCallbackEvent::Run  netwerk/base/nsAsyncRedirectVerifyHelper.cpp:41
6  XUL  mozilla::RunnableTask::Run  xpcom/threads/TaskController.cpp
6  XUL  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:867
7  XUL  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:698

It looks like SetFingerprintingRandomizationKey was added in 1816064.

Flags: needinfo?(tihuang)

Set release status flags based on info from the regressing bug 1816064

Assignee: nobody → tihuang
Status: NEW → ASSIGNED
Flags: needinfo?(tihuang)
Pushed by tihuang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/92f3e33493ce Reset the mFingerprintingRandomKey of CookieJarSettings before setting it. r=anti-tracking-reviewers,pbz
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: