Bug 1821545 - Reset the mFingerprintingRandomKey of CookieJarSettings before setting it. r=anti-tracking-reviewers,pbz

Differential Revision: https://phabricator.services.mozilla.com/D172213